# browser-skills

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  STATUS.md  pyproject.toml
.github/workflows/: benchmark.yml  ci.yml  dco.yml
benchmarks/: file_issues.py  publish.py  run.py  sites.yaml
docs/: authoring.md  benchmarks.md  ecosystem-recon.md  ethics.md  killer-demo.md  matcher-design.md  mcp-design.md  quickstart.md  roadmap-v0.2.md  roadmap-v0.3.md  roadmap-v0.4.md  runner-design.md  skill-recipe-format.md  skills-design.md
docs/launch/: blog-post.md  posts.md
skills/date-picker-widget/: SKILL.md
skills/detect-captcha/: SKILL.md
skills/dismiss-cookie-banner/: SKILL.md
skills/dismiss-newsletter-popup/: SKILL.md
skills/exit-tracking-popup/: SKILL.md
skills/extract-table-pagination/: SKILL.md
skills/fill-multi-step-form/: SKILL.md
skills/handle-infinite-scroll/: SKILL.md
skills/handle-modal-dialog/: SKILL.md
skills/login-flow/: SKILL.md
skills/pagination-next-page/: SKILL.md
skills/search-and-filter/: SKILL.md
skills/searchable-dropdown/: SKILL.md
skills/upload-download-file/: SKILL.md
skills/verify-page-loaded/: SKILL.md
src/: __init__.py  _chromium.py  criteria.py  matcher.py  trace.py
src/browser_skills/: __init__.py  _chromium.py  _js_predicates.py  cli.py  config.py  criteria.py  matcher.py  runner.py  server.py  skill.py  trace.py
src/browser_skills/adapters/: __init__.py  playwright_raw.py
src/browser_skills/primitives/: __init__.py  assertions.py  click.py  extract.py  form.py  scroll.py  vision_fallback.py  wait.py
src/primitives/: __init__.py  extract.py  vision_fallback.py
tests/: conftest.py  test_adapter_playwright.py  test_benchmark_runner.py  test_bundle_completeness.py  test_chromium_helper.py  test_cli_doctor.py  test_cli_mcp_install.py  test_criteria_eval.py  test_criteria_parser.py  test_integration_collection.py  test_integration_playwright.py  test_js_predicates_shared.py  test_matcher.py  test_matcher_correctness.py  test_mcp_server.py  test_no_js_injection.py  test_parser.py  test_primitives.py  test_primitives_form.py  test_result_vars_split.py  test_runner.py  test_runner_criteria_wiring.py  test_server_guards.py  test_skill_cache.py  test_trace.py  test_trace_redaction.py  test_version.py  test_workflows.py
tests/fixtures/dismiss-cookie-banner/: page.html
(+2 files in other folders)
