[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-skills"
version = "0.0.1"
description = "Reusable skills bundle + MCP server for browser-using AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "browser-skills contributors" }]

[tool.hatch.build.targets.wheel]
packages = ["src/browser_skills"]
