[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-skills"
version = "0.3.0"
description = "Reusable skills bundle + MCP server for browser-using AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "browser-skills contributors" }]
keywords = ["mcp", "browser", "agent", "playwright", "skills", "computer-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.44",
    "fastmcp>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpserver>=1.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
vision = [
    # Vision fallback uses the model the user has configured.
    # We don't pin a provider; see docs/skill-recipe-format.md.
    "anthropic>=0.30",
]

[project.scripts]
browser-skills = "browser_skills.cli:app"

[project.urls]
Homepage = "https://github.com/browser-skills/browser-skills"
Repository = "https://github.com/browser-skills/browser-skills"
Issues = "https://github.com/browser-skills/browser-skills/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_skills"]

[tool.hatch.build.targets.wheel.shared-data]
"skills" = "browser_skills/_skills"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "slow: real-browser integration tests (require `playwright install chromium`).",
]
